# MagisterskaNalogaKoda

./: .gitignore  3  AnalizaNovPc.R  Analysis.R  Banchmark.hpp  CMakeCache.txt  CMakeLists.txt  KMP.cpp  MagisterskaNalogaKoda.Rproj  Makefile  README.md  callgrind.out.13200  cmake_install.cmake  cst-space-usage.html  dna.50MB.800.dot  logfile.out  main  main.cpp  mainCST  mainNaKlancu  mainNative  mainST  make  nohup.out  out.txt  program  rez.csv  rezCST.csv  rezNovPc.csv  rezNovPcNaKlancu-march2000000.csv  rezNovPcNaKlancu.csv  rezNovPcNaKlancu2000000.csv  rezST-memNonlim.csv  rezST.csv  sa_4526_0.sdsl  split.sh
Latex/: Platnica_za_zakljucno_nalogo.tex  Poglavje 3..md  Struktura.md  Ukazi.tex  compile Full.ps1  compile.ps1  compile1.ps1  dfuds.txt  magistrska_FAMNIT_2_stopnja_MA_MEF_2021.sty  template.tex  texsys.aux
Latex/.obsidian/: community-plugins.json  workspace.json
Latex/Drugo/: Kratice.tex  Literatura.tex  Ukazi.tex
Latex/KompaktnaPredstavitev/: Izgradnja.tex  KompaktnaDrevesa.tex  KompaktnaPriponskaDrevesa.tex  Poizvedba.tex  Uvod.tex
Latex/Notacija/: BitniVektor.tex  EniskiZapis.tex  KompaktnaDrevesa.tex  Uvod.tex
Latex/Operacije/: Analiza.tex  AnalizaSamoTabele.tex  Evalvacija.tex  Opis.tex  OpisOrignal.tex  Razprava.tex  Uvod.tex
Latex/PriponskoPolje/: LCP.tex  (+5 more)
include/: KMP.h
src/: main.c
test/: NaKlancu.txt  dna.50MB.102400.txt  dna.50MB.12800.txt  dna.50MB.1600.txt  dna.50MB.204800.txt  dna.50MB.25600.txt  dna.50MB.3200.txt  dna.50MB.409600.txt  dna.50MB.51200.txt  dna.50MB.6400.txt  dna.50MB.80.txt  dna.50MB.800.txt  dna.50MB.819200.txt
(+13 files in other folders)
